 * Use OpOrder in repairIterator to ensure we don't lose memtables mid-paxos repair (Cassandra-19668)
 * Refresh stale paxos commit (CASSANDRA-19617)
 * Reduce info logging from automatic paxos repair (CASSANDRA-19445)
 * Support legacy plain_text_auth section in credentials file removed unintentionally (CASSANDRA-19498)
Merged from 4.0:
 * Fix schema.cql created by a snapshot after dropping more than one column (CASSANDRA-19747)
 * UnsupportedOperationException when reducing scope for LCS compactions (CASSANDRA-19704)
 * Make LWT conditions behavior on frozen and non-frozen columns consistent for null column values (CASSANDRA-19637)
 * Add timeout specifically for bootstrapping nodes (CASSANDRA-15439)
 * Bring Redhat packge dirs/ownership/perms in line with Debian package (CASSANDRA-19565)
Merged from 3.0:
 * Upgrade OWASP to 10.0.0 (CASSANDRA-19738)


4.1.5
 * Make queries visible to the "system_views.queries" virtual table at the coordinator level (CASSANDRA-19577)
 * Concurrent equivalent schema updates lead to unresolved disagreement (CASSANDRA-19578)
 * Fix hints delivery for a node going down repeatedly (CASSANDRA-19495)
 * Do not go to disk for reading hints file sizes (CASSANDRA-19477)
 * Fix system_views.settings to handle array types (CASSANDRA-19475)
Merged from 4.0:
 * UnsupportedOperationException when reducing scope for LCS compactions (CASSANDRA-19704)
 * Make nodetool import congruent with the documentation by not relying on the folder structure of the imported SSTable files (CASSANDRA-19401)
 * IR may leak SSTables with pending repair when coming from streaming (CASSANDRA-19182)
 * Streaming exception race creates corrupt transaction log files that prevent restart (CASSANDRA-18736)
 * Fix CQL tojson timestamp output on negative timestamp values before Gregorian calendar reform in 1582 (CASSANDRA-19566)
 * Fix few types issues and implement types compatibility tests (CASSANDRA-19479)